name:                xanadu
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://mcol.xyz/code/xanadu
license:             BSD3
license-file:        LICENSE
author:              Matt Colligan
maintainer:          mlv@posteo.net
copyright:           2021 Matt Colligan
category:            Desktop
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.rst

executable xanadu
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , gi-gio
                     , gi-gtk
                     , haskell-gi-base
