name:                xanadu
version:             0.1.0.0
-- synopsis:
description:         A standalone desktop metaphor for standalone window managers.
homepage:            https://github.com/m-col/xanadu
license:             BSD3
license-file:        LICENSE
author:              Matt Colligan
maintainer:          mcol@posteo.net
copyright:           2021 Matt Colligan
category:            Desktop
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.rst

executable xanadu
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Icons
                     , Window
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , filepath
                     , gi-gdk
                     , gi-gdkpixbuf
                     , gi-gio
                     , gi-gtk
                     , haskell-gi-base
                     , text
                     , transformers
